fixed truncated search page

--- a/frontend/src/stylesheets/feed.css
+++ b/frontend/src/stylesheets/feed.css
@@ -6,10 +6,6 @@
   border-radius: 100%;
 }
 
-.feed-outer {
-  min-height: 60vh;
-}
-
 .feed-username-container, .post-text-container {
   box-shadow: 2px 2px 10px black;
 }
